--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
 </head>
 
 <body>
@@ -27,11 +28,11 @@
     <section id="sideNav">
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Features</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Testtimonial</a></li>
-                <li><a href="#">Meet Us</a></li>
+                <li><a href="#banner">Home</a></li>
+                <li><a href="#feature">Features</a></li>
+                <li><a href="#service">Services</a></li>
+                <li><a href="#testimonial">Testimonial</a></li>
+                <li><a href="#footer">Meet Us</a></li>
             </ul>
         </nav>
     </section>
@@ -207,8 +208,8 @@
                 <p>+01 123456789 <i class="bi bi-phone"></i></p>
             </div>
         </div>
-        <div class="social-links">
-            <i class="bi bi-facebook"></i>
+        <div class="social-link">
+            <a href="https://www.facebook.com" target="_blank"><i class="bi bi-facebook"></i></a>
             <i class="bi bi-instagram"></i>
             <i class="bi bi-twitter"></i>
             <i class="bi bi-youtube"></i>
@@ -230,6 +231,12 @@
                 menu.src = "images/menu.png";
             }
         }
+
+        // All animations will take exactly 1000ms
+        var scroll = new SmoothScroll('a[href*="#"]', {
+            speed: 1000,
+            speedAsDuration: true
+        });
     </script>
 </body>
 
